RESOLVED FIXED 55365
REGRESSION (r79040): WebKit2: Large portions of pages with plugins paint black
https://bugs.webkit.org/show_bug.cgi?id=55365
Summary REGRESSION (r79040): WebKit2: Large portions of pages with plugins paint black
Adam Roben (:aroben)
Reported 2011-02-28 05:19:33 PST
To reproduce (in a build with the fix for bug 55364): 1. Launch MiniBrowser 2. Go to http://dictionary.reference.com/browse/miffy Most of the page is black.
Attachments
Pass the right dirty rect to Plugin::paint (18.31 KB, patch)
2011-02-28 05:21 PST, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2011-02-28 05:19:41 PST
Adam Roben (:aroben)
Comment 2 2011-02-28 05:21:38 PST
Created attachment 84043 [details] Pass the right dirty rect to Plugin::paint
WebKit Review Bot
Comment 3 2011-02-28 05:24:17 PST
Attachment 84043 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Tools/DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowlessPaintRectCoordinates.cpp:40: The parameter name "saved" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 4 2011-02-28 05:25:43 PST
Comment on attachment 84043 [details] Pass the right dirty rect to Plugin::paint View in context: https://bugs.webkit.org/attachment.cgi?id=84043&action=review >> Tools/DumpRenderTree/TestNetscapePlugIn/Tests/win/WindowlessPaintRectCoordinates.cpp:40 >> + virtual NPError NPP_New(NPMIMEType pluginType, uint16_t mode, int16_t argc, char *argn[], char *argv[], NPSavedData *saved); > > The parameter name "saved" adds no information, so it should be removed. [readability/parameter_name] [5] Fixed. Also removed "pluginType", and fixed * placement.
Adam Roben (:aroben)
Comment 5 2011-02-28 07:33:21 PST
Simon Fraser (smfr)
Comment 6 2011-02-28 08:30:47 PST
Thanks for fixing and all the testing work, Adam!
Note You need to log in before you can comment on or make changes to this bug.