Tools/WebKitTestRunner/win/PlatformWebViewWin.cpp
@@ -54,6 +54,7 @@ PlatformWebView::PlatformWebView(WKContextRef contextRef, WKPageGroupRef pageGro
     RECT viewRect = {0, 0, 800, 600};
     m_window = CreateWindowExW(0, hostWindowClassName, L"WebKitTestRunner", WS_OVERLAPPEDWINDOW, 0 /*XOFFSET*/, 0 /*YOFFSET*/, viewRect.right, viewRect.bottom, 0, 0, GetModuleHandle(0), 0);
     m_view = WKViewCreate(viewRect, contextRef, pageGroupRef, m_window);
+    WKViewSetIsInWindow(m_view, true);
 }
 
 PlatformWebView::~PlatformWebView()
