Tools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp
@@ -79,6 +79,11 @@ NPError PluginTest::NPP_SetWindow(NPP, NPWindow*)
     return NPERR_NO_ERROR;
 }
 
+int16_t PluginTest::NPP_HandleEvent(void*)
+{
+    return 0;
+}
+
 void PluginTest::NPN_InvalidateRect(NPRect* invalidRect)
 {
     browser->invalidaterect(m_npp, invalidRect);
